# intro-to-ocaml

./: README.mkd
src/: dune  intro-to-ocaml.ml  intro-to-ocaml.mli
tests/exercise01/: dune  test.ml
tests/exercise02/: dune  test.ml
tests/exercise03/: dune  test.ml
tests/exercise04/: dune  test.ml
tests/exercise05/: dune  test.ml
tests/exercise06/: dune  test.ml
tests/exercise07/: dune  test.ml
tests/exercise08/: dune  test.ml
tests/exercise09/: dune  test.ml
tests/exercise10/: dune  test.ml
tests/exercise11/: dune  test.ml
