;; -*- mode: scheme; -*-

(library
  (name intro_to_ocaml_exercise06)
  (libraries
   core
   intro_to_ocaml
   )
  (inline_tests)
  (preprocess (pps ppx_jane)))

(env
 (dev
  (flags (:standard
          -w -20
          -w -27
          -w -32
          -w -34
          -w -37
          -w -39)))
 (release
  (flags (:standard))))
